fix: added jaas client config
