# src/main/java/com/chargebee/ingestion/controllers/StatusApiController.java
@@ -1,6 +1,7 @@
 package com.chargebee.ingestion.controllers;
 
-import com.chargebee.ingestion.models.GetInfo200Response;
+import com.chargebee.ingestion.models.ApplicationInfo;
+import com.chargebee.ingestion.service.ApplicationInfoService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -11,21 +12,24 @@ import org.springframework.web.context.request.NativeWebRequest;
 import javax.annotation.Generated;
 import java.util.Optional;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2024-08-22T10:52:22.595673+05:30[Asia/Kolkata]")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2024-08-22T23:20:51.709090+05:30[Asia/Kolkata]")
 @Controller
 @RequestMapping("${openapi.usageIngestion.base-path:/v1}")
-public class DefaultApiController implements DefaultApi {
+public class StatusApiController implements StatusApi {
 
+    private final ApplicationInfoService applicationInfoService;
     private final NativeWebRequest request;
 
     @Autowired
-    public DefaultApiController(NativeWebRequest request) {
+    public StatusApiController(ApplicationInfoService applicationInfoService, NativeWebRequest request) {
+        this.applicationInfoService = applicationInfoService;
         this.request = request;
     }
 
     @Override
-    public ResponseEntity<GetInfo200Response> getInfo() {
-        return new ResponseEntity<>(new GetInfo200Response().status("200").description("UPV4"), HttpStatus.OK);
+    public ResponseEntity<ApplicationInfo> getInfo() {
+        ApplicationInfo info = applicationInfoService.getApplicationInfo();
+        return new ResponseEntity<>(info, HttpStatus.OK);
     }
 
     @Override
